--- a/site/src/components/navigation.scss
+++ b/site/src/components/navigation.scss
@@ -1,9 +1,11 @@
 .navigation--container{
   nav{
-    ul{
+    .menu{
       margin: 0;
       padding: 0;
       list-style: none;
+      display: flex;
+      justify-content: flex-start;
     }
   }
 }
