added simple page transition

--- a/site/src/components/fonts.scss
+++ b/site/src/components/fonts.scss
@@ -28,9 +28,29 @@ body{
     }
 }
 .container{
+  margin: 0 auto;
   max-width: 95rem;
   padding: 0 30px;
   @media (min-width: 768px){
     padding: 0 20px;
+  }
+}
+.site--brand{
+  margin: 0;
+  font-family: "Avenir Next";
+  font-weight: 400;
+  letter-spacing: 0.125rem;
+  a{
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1rem;
+    color: black;
+  }
+}
+
+.page{
+  padding: 2.6rem 0px;
+  @media (min-width: 768px){
+    padding: 4rem 0px;
   }
 }
