--- a/site/src/components/hamburger.scss
+++ b/site/src/components/hamburger.scss
@@ -1,5 +1,5 @@
 .menu-toggle{
-	flex:0 0 auto;
+	//flex:0 0 auto;
 	width:40px;
 	height:40px;
 	cursor:pointer;
@@ -35,10 +35,10 @@
 	transform:translateX(0);
 }
 .hamburger span:nth-child(2):before,.hamburger span:nth-child(2):after{
-	transition-delay:75ms;
+	transition-delay:50ms;
 }
 .hamburger span:last-child:before,.hamburger span:last-child:after{
-	transition-delay:150ms;
+	transition-delay:100ms;
 }
 .menu-toggle:hover .hamburger span:before{
 	transform:translateX(0);
@@ -54,7 +54,7 @@
 }
 .cross span{
 	display:block;
-	width:18px;
+	width:30px;
 	height:2px;
 	background-color:rgb(15,15,15);
 	transform:translateY(50%) rotate(45deg) scaleX(0);
