--- a/site/src/components/fonts.scss
+++ b/site/src/components/fonts.scss
@@ -1,46 +1,48 @@
-@font-face{
-    font-family:"Avenir Next Bold";
-    font-weight: 900;
-    src:url("./fonts/AvenirNext-Heavy.woff2") format("woff2"),url("./fonts/AvenirNext-Heavy.woff") format("woff");
+@font-face {
+  font-family: 'Avenir Next Bold';
+  font-weight: 900;
+  src: url('./fonts/AvenirNext-Heavy.woff2') format('woff2'),
+    url('./fonts/AvenirNext-Heavy.woff') format('woff');
 }
 
-@font-face{
-  font-family: "Avenir Next";
+@font-face {
+  font-family: 'Avenir Next';
   font-weight: 400;
-  src:url("./fonts/AvenirNextLTPro-Regular.woff2") format("woff2"),url("./fonts/AvenirNextLTPro-Regular.woff") format("woff");
+  src: url('./fonts/AvenirNextLTPro-Regular.woff2') format('woff2'),
+    url('./fonts/AvenirNextLTPro-Regular.woff') format('woff');
 }
 
-body{
-  font-family: "Avenir Next";
+body {
+  font-family: 'Avenir Next';
   font-weight: 400;
   font-size: calc(17.5 / 16 * 1rem);
 }
 
-.page--title{
-  font-family:"Avenir Next Bold";
-    font-weight: 900;
-    font-size: calc(9rem + .525vw);
-    text-transform: uppercase;
-    line-height: 1;
-    color: black;
-    span{
-      color: red;
-    }
+.page--title {
+  font-family: 'Avenir Next Bold';
+  font-weight: 900;
+  font-size: calc(9rem + 0.525vw);
+  text-transform: uppercase;
+  line-height: 1;
+  color: black;
+  span {
+    color: red;
+  }
 }
-.container{
+.container {
   margin: 0 auto;
   max-width: 95rem;
   padding: 0 30px;
-  @media (min-width: 768px){
+  @media (min-width: 768px) {
     padding: 0 20px;
   }
 }
-.site--brand{
+.site--brand {
   margin: 0;
-  font-family: "Avenir Next";
+  font-family: 'Avenir Next';
   font-weight: 400;
   letter-spacing: 0.125rem;
-  a{
+  a {
     text-decoration: none;
     text-transform: uppercase;
     font-size: 1rem;
@@ -48,9 +50,9 @@ body{
   }
 }
 
-.page{
+.page {
   padding: 2.6rem 0px;
-  @media (min-width: 768px){
+  @media (min-width: 768px) {
     padding: 4rem 0px;
   }
 }
