--- a/site/src/components/fonts.scss
+++ b/site/src/components/fonts.scss
@@ -28,7 +28,7 @@ body {
   font-size: calc(3.6rem + 0.525vw);
 
   &.hello {
-    text-indent: -8px;
+    text-indent: -10px;
   }
 
   .blink {
@@ -56,10 +56,10 @@ body {
 .container {
   margin: 0 auto;
   max-width: 1400px;
-  padding: 0 60px;
+  padding: 0 20px;
 
   @media (min-width: 768px) {
-    padding: 0 20px;
+    padding: 0 calc(60px + 0.500vw);
   }
 }
 
