--- a/site/src/components/header.scss
+++ b/site/src/components/header.scss
@@ -3,7 +3,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  height: 44px;
+  height: 60px;
+  padding-top: 15px;
   width: 100%;
   z-index: 99;
   .header{
