--- a/site/src/components/home/hello.scss
+++ b/site/src/components/home/hello.scss
@@ -1,4 +1,8 @@
 .hello {
+  margin-bottom: 20px;
+  @media (min-width: 768px){
+    margin-bottom: 35px;
+  }
   h2 {
     font-family: 'Avenir Next';
     font-weight: 400;
