--- a/site/src/components/navigation.scss
+++ b/site/src/components/navigation.scss
@@ -10,7 +10,7 @@
     height: 100%;
     padding-top: 6vw;
     .menu {
-      margin: 0;
+      margin: 0 auto;
       padding: 0;
       list-style: none;
       height: 100%;
